--- a/tp10_repaso/css/estilo.CSS
+++ b/tp10_repaso/css/estilo.CSS
@@ -38,11 +38,39 @@ nav a:hover{
     text-align: center;
 }
 main{
-    font-size: 1em ;
-    display: inline block;
+    font-size: 1em;
+    display: inline-block;
     width: 60%;
-    
+} 
+#contenedor #f2{
+    width: 30%;
+    display: inline-block;
 }
-main img{
+#siglo{
+    text-align: center;
+    margin: 0;
+    font-size: 2em;
+}
+#anotate{
+    text-align: center;
+    display: block;
+    font-size:2em ;
+    width: fit-content;
+    background-color: black;
+    margin: 0;
+    text-decoration: none;
+}
+footer{
+    background-color: darkgrey;
+    padding: 0.5em 2em;
+    position: relative;
+    left: 1%;
+    width: 100%;
+    margin-top: 2em;
+}
+footer img{
+    width:50px ;
+    vertical-align: middle;
+}
 
-}
+
