--- a/tp11/css/02.css
+++ b/tp11/css/02.css
@@ -58,3 +58,74 @@ background-color: green;
     height: 100px;
     margin-top: 10px;
 }
+#espacio{
+    display: block;
+    width: 600px;
+    height: 600px;
+    background-color: black;
+    position: relative;
+}
+#espacio img{
+    width: 150px;
+    position: absolute;
+    bottom: 0;
+    left: 40%;
+    transition: 1s;
+}
+#espacio:hover img{
+    bottom: 600px;
+}
+h1{
+    text-align:center;
+}
+#baner{
+    display: block;
+    width: 600px;
+    height: 600px;
+    background-color: aquamarine;
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+}
+#baner h2{
+    position: absolute;
+    top: 20px; ;
+    bottom: 0;
+    left: -30%;
+}
+#baner h3{
+    position: absolute;
+    right: -30%;
+    top: 100px;
+}
+#baner a{
+    position: absolute;
+    left: -100px;
+    top: 200px;
+    transition: 1s;
+}
+#baner img{
+    position: absolute;
+    width: 350px;
+    top: 100px;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    transition: 1s;
+    transition-delay: 1s;
+}
+#baner:hover h2{
+    left: 90px;
+}
+#baner:hover h3{
+    right: 90px;
+}
+#baner:hover a{
+    left: 100px;
+}
+#baner:hover img{
+    left: 100px;
+}
+
+
+
