--- a/tp14/css/02.css
+++ b/tp14/css/02.css
@@ -1,12 +1,12 @@
 body{
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
-    background-color: grey;
+    background-color: rgb(15, 1, 1);
     display: flex;
 }
 #contenedor{
     background-color: aliceblue;
-    width: 70%;
+    width: 80%;
 }
 header{
     display: flex;
@@ -26,8 +26,9 @@ nav a{
     color: inherit;
     padding: 1em;
     font-size: 0.8em;
-    font-weight: 600;
+    font-weight: 100;
 }
 nav a:hover{
-    background-color: rgb(0, 130, 130);
+    background-color: red;
 }
+
