--- a/tp22/css/estilo04.css
+++ b/tp22/css/estilo04.css
@@ -28,7 +28,7 @@ color: violet;
 }
 .ejercicio .btn{
     background-color: rgb(207, 182, 231);
-    color: white;
+    color: rgb(44, 13, 13);
     cursor: pointer;
     padding: 0.7em;
     width: fit-content;
@@ -38,6 +38,6 @@ color: violet;
     gap: 1em;
 }
 .ejercicio .salida{
-    border: 2px rgb(206, 192, 213);
+    border: 2px rgb(142, 69, 179);
     width: 100%;
 }
