--- a/tp24/estilo/estilo_01.css
+++ b/tp24/estilo/estilo_01.css
@@ -18,4 +18,9 @@
     flex-direction: column;
     gap: 1em;
     width: 500px;
+    padding: 1em ;
+}
+h1{
+    border-bottom: 3px solid white;
+    
 }
