--- a/tp25/css/02_estilo.css
+++ b/tp25/css/02_estilo.css
@@ -49,3 +49,29 @@
     background-color: darkslategray;
     color: white;
   }
+  .btnpendiente{
+    background-color: rgb(235, 178, 35);
+    color: white;
+  }
+  #cortina{
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+  }
+  #contmodificartarea{
+    background-color: white;
+    display: flex;
+    flex-direction: column ;
+    gap: 0.5em;
+    padding: 1em;
+  }
+  #btnmodificartarea{
+    background-color: green;
+    color: white;
+  }
